--- a/{{cookiecutter.project_slug}}/environment.yml
+++ b/{{cookiecutter.project_slug}}/environment.yml
@@ -1,14 +1,15 @@
 name: {{cookiecutter.project_slug}}
 channels:
   - conda-forge
+  - defaults
 dependencies:
   - python=3.8
+  - jupyterlab
+  - nb_conda
   - numpy
-  - toolz
-  - matplotlib
-  - dill
   - pandas
-  - partd
-  - bokeh
+  - matplotlib
+  - seaborn
+  - scikit-learn
   # - pip:
   #   - git+https://github.com/blaze/dask.git#egg=dask[complete]
