--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,11 +1,18 @@
 name: Vantage Template
 ​
-on: [push]
+on:
+  pull_request:
+  push:
+    branches:
+      - master
+      - develop
+      - feature_github_actions
 ​
 jobs:
   build:
-​
+    name: Building project
     runs-on: ubuntu-latest
+
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.8
