Update config class

--- a/{{cookiecutter.project_slug}}/config.ini
+++ b/{{cookiecutter.project_slug}}/config.ini
@@ -1,6 +1,10 @@
 [DEFAULT]
-param1 = "param1"
+param1 = "value"
 param2 = 3
 
-[PATHS]
+[DEVELOPMENT]
 project_path = "~/Projects/Vantage-template/"
+
+
+[TEST]
+project_path = "/TEST/Projects/Vantage-template/"
