Add production env to config

--- a/{{cookiecutter.project_slug}}/config.ini
+++ b/{{cookiecutter.project_slug}}/config.ini
@@ -8,3 +8,7 @@ project_path = "~/Projects/Vantage-template/"
 
 [TEST]
 project_path = "/TEST/Projects/Vantage-template/"
+
+
+[PRODUCTION]
+project_path = "/PRD/Projects/Vantage-template/"
