--- a/{{cookiecutter.project_slug}}/config.ini
+++ b/{{cookiecutter.project_slug}}/config.ini
@@ -1,6 +1,10 @@
 [DEFAULT]
+# comments
 param1 = "value"
 param2 = 3
+param3 = 5
+data_folder = './data'
+
 
 [DEVELOPMENT]
 project_path = "~/Projects/Vantage-template/"
