--- a/{{cookiecutter.project_slug}}/config.ini
+++ b/{{cookiecutter.project_slug}}/config.ini
@@ -1,9 +1,7 @@
 [DEFAULT]
 # comments
-param1 = "value"
-param2 = 3
-param3 = 5
-data_folder = './data'
+param1 = "param1"
+param2 = 2
 
 
 [DEVELOPMENT]
