--- a/{{cookiecutter.project_slug}}/.github/workflows/main.yaml
+++ b/{{cookiecutter.project_slug}}/.github/workflows/main.yaml
@@ -21,8 +21,7 @@ jobs:
         python-version: 3.8
     - name: Make environment
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        conda env create -f environment.yaml
     - name: Display packages
       run: |
         pip freeze
