--- a/{{cookiecutter.project_slug}}/config.ini
+++ b/{{cookiecutter.project_slug}}/config.ini
@@ -5,12 +5,12 @@ param2 = 2
 
 
 [DEVELOPMENT]
-project_path = "~/Projects/Vantage-template/"
+data_path = "~/data"
 
 
 [TEST]
-project_path = "/TEST/Projects/Vantage-template/"
+data_path = "/TEST/data/"
 
 
 [PRODUCTION]
-project_path = "/PRD/Projects/Vantage-template/"
+data_path = "/PRD/data/"
