--- a/{{cookiecutter.project_slug}}/.github/workflows/main.yaml
+++ b/{{cookiecutter.project_slug}}/.github/workflows/main.yaml
@@ -21,7 +21,7 @@ jobs:
         python-version: 3.8
     - name: Make environment
       run: |
-        conda env create -f environment.yml
+        conda env create -f environment.yaml
     - name: Display packages
       run: |
         pip freeze
