Change the initial config parameters

--- a/{{cookiecutter.project_slug}}/config.ini
+++ b/{{cookiecutter.project_slug}}/config.ini
@@ -1,11 +1,10 @@
 [DEFAULT]
 # comments
-param1 = "param1"
-param2 = 2
+param1 = 1
 
 
 [DEVELOPMENT]
-data_path = "~/data"
+data_path = "./data"
 
 
 [TEST]
