--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,10 +1,4 @@
 # pre-commit
-#     - Use pre-commit to automate checks for each commit, see their [website](https://pre-commit.com/) for more info.
-#     - Configuration is in */.pre-commit-config.yaml*.
-#     - For installation:
-#         1. run ```pip install pre-commit``` (or ```pip install env\requirements.txt```) in your environment.
-#         2. run ```pre-commit install``` in this repo.
-#         3. Now with each commit, pre-commit is automatically executed.
 exclude: ''
 repos:
 - repo: git://github.com/pre-commit/pre-commit-hooks
@@ -13,5 +7,7 @@ repos:
     - id: check-merge-conflict
     - id: no-commit-to-branch
       args: [--branch, master]
+    - id: check-json
+    - id: check-yaml
 
 
