--- a/{{cookiecutter.project_slug}}/environment.yaml
+++ b/{{cookiecutter.project_slug}}/environment.yaml
@@ -11,5 +11,6 @@ dependencies:
   - matplotlib
   - seaborn
   - scikit-learn
-  # - pip:
-  #   - git+https://github.com/blaze/dask.git#egg=dask[complete]
+  - pip
+  - pip:
+    - -r file:requirements.txt
