--- a/{{cookiecutter.project_slug}}/.github/workflows/main.yaml
+++ b/{{cookiecutter.project_slug}}/.github/workflows/main.yaml
@@ -16,6 +16,13 @@ jobs:
     - name: Make environment
       run: |
         conda env create -f environment.yaml
+        conda activate {{cookiecutter.project_slug}}
+    - name: Install packages
+      run: |
+        pip install -e .
     - name: Display packages
       run: |
         pip freeze
+    - name: Run tests
+      run: |
+        pytest tests
