--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -20,13 +20,13 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install -e .
+        python -m pip install -r requirements.txt
+        python -m pip install -e .
       working-directory: vantage_template_repo
     - name: Display packages
       run: |
-        pip freeze
+        python -m pip freeze
     - name: Run tests
       run: |
-        pytest tests
+        python -m pytest tests
       working-directory: vantage_template_repo
