Pytest and create package (#21)
Add pre-commit and extend github actions

--- a/environment.yaml
+++ b/environment.yaml
@@ -1,11 +1,9 @@
-name: {{cookiecutter.project_slug}}
+name: vantage-template
 channels:
   - conda-forge
   - defaults
 dependencies:
   - python=3.8
-  - jupyterlab
-  - nb_conda
   - pip
-  - pip:
+  - pip: 
     - -r file:requirements.txt
