Add some proper testing for the config class

--- a/{{cookiecutter.project_slug}}/config.ini
+++ b/{{cookiecutter.project_slug}}/config.ini
@@ -1,15 +1,13 @@
 [DEFAULT]
 # comments
-param1 = 1
-
+param = 1
+data_path [path] = "/"
 
 [DEVELOPMENT]
-data_path = "${project_root}/data.csv"
-
+data_path [path] = "${project_root}/data/"
 
 [TEST]
-data_path = "/TEST/data/"
-
+data_path [path] = "/TEST/data/"
 
 [PRODUCTION]
-data_path = "/PRD/data/"
+data_path [path] = "/PRD/data/"
