--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -26,7 +26,7 @@ jobs:
     - name: Display packages
       run: |
         python -m pip freeze
-    - name: Run tests
-      run: |
-        python -m pytest tests
-      working-directory: vantage_template_repo
+#    - name: Run tests
+#      run: |
+#        python -m pytest tests
+#      working-directory: vantage_template_repo
