--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -21,12 +21,12 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install -r requirements.txt
-        python -m pip install -e .
-      working-directory: vantage_template_repo
+        python -m pip install -e vantage_template_repo.
+      working-directory:
     - name: Display packages
       run: |
         python -m pip freeze
-#    - name: Run tests
-#      run: |
-#        python -m pytest tests
-#      working-directory: vantage_template_repo
+    - name: Run tests
+      run: |
+        python -m pytest src/tests
+      working-directory: vantage_template_repo
