--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -21,8 +21,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install -r requirements.txt
-        python -m pip install -e vantage_template_repo.
-      working-directory:
+        python -m pip install -e .
+      working-directory: vantage_template_repo
     - name: Display packages
       run: |
         python -m pip freeze
