--- a/{{cookiecutter.project_slug}}/config.ini
+++ b/{{cookiecutter.project_slug}}/config.ini
@@ -3,6 +3,8 @@
 param = 1
 data_path [path] = "/"
 my_list = [1,2,3 , 6]
+my_second_list = [1,2,
+    3,4]
 
 [DEVELOPMENT]
 data_path [path] = "${project_root}/data/"
